--- a/app/styles/partials/_home.scss
+++ b/app/styles/partials/_home.scss
@@ -121,3 +121,7 @@ li p {
 .fork-me {
     background-color: $black;
 }
+
+.pen-msg + div {
+    overflow: auto;
+}
